fix margin spacing

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 
 p {
   font-size: 25;
+  line-height: 1.0;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .text1 {
